Refactor add redirectUris to a more generic add field function

--- a/examples/keycloak/makefile
+++ b/examples/keycloak/makefile
@@ -19,7 +19,8 @@ keycloak.ensure: keycloak.ensure-ready
 	@$(call start-keycloak-session,http://\$${KC_HTTP_HOST:-localhost}:\$${KC_HTTP_PORT:-8080},master,\$${KEYCLOAK_ADMIN:-admin},\$${KEYCLOAK_ADMIN_PASSWORD:-admin})
 	@$(call ensure-keycloak-realm,my-realm)
 	@$(call ensure-keycloak-realm-client,my-realm,my-client)
-	@$(call update-keycloak-realm-client-redirectUris,my-realm,my-client,http://localhost:8080/*)
+	@$(call update-keycloak-realm-client-field,my-realm,my-client,secret,pf4i0zqFhYaLX0LvWZiBwA9ONmhKKH0w)
+	@$(call update-keycloak-realm-client-field,my-realm,my-client,redirectUris,["http://localhost:8080/*"])
 	@$(call ensure-keycloak-realm-client-role,my-realm,my-client,my-role)
 	@$(call ensure-keycloak-realm-user,my-realm,$(shell whoami))
 	@$(call reset-keycloak-realm-user-password,my-realm,$(shell whoami),$(shell whoami))
