--- a/examples/composer/compose.yml
+++ b/examples/composer/compose.yml
@@ -2,6 +2,8 @@ services:
 
   php:
     image: php:8.1-fpm-alpine
+    environment:
+      - "COMPOSER_HOME=/app/.composer"
     user: "${UID}:${GID}"
     working_dir: "/app"
     volumes:
