add a docker-tools example

--- a/examples/docker-tools/makefile
+++ b/examples/docker-tools/makefile
@@ -5,4 +5,4 @@
 include ../../builtins.makefile
 include ../../base.makefile
 include ../../docker.makefile
-include ../../docker-tools/portainer.makefile
+include ../../docker-tools.makefile
