use yacht projects

--- a/examples/docker-tools/makefile
+++ b/examples/docker-tools/makefile
@@ -2,6 +2,8 @@
 ##. Configuration
 ###
 
+YACHT_PROJECTS_ROOT_DIR=$(shell cd ../../examples && pwd)
+
 include ../../builtins.makefile
 include ../../base.makefile
 include ../../docker.makefile
