update the examples to use base + help

--- a/examples/docker-tools/makefile
+++ b/examples/docker-tools/makefile
@@ -4,7 +4,7 @@
 
 YACHT_PROJECTS_ROOT_DIR=$(shell cd ../../examples && pwd)
 
-include ../../builtins.makefile
 include ../../base.makefile
+include ../../help.makefile
 include ../../docker.makefile
 include ../../docker-tools.makefile
