--- a/examples/docker-tools/makefile
+++ b/examples/docker-tools/makefile
@@ -7,4 +7,4 @@ YACHT_PROJECTS_ROOT_DIR=$(shell cd ../../examples && pwd)
 include ../../base.makefile
 include ../../help.makefile
 include ../../docker.makefile
-include ../../docker-tools.makefile
+include ../../docker-tools/all.makefile
