extend the composer example

--- a/examples/composer/makefile
+++ b/examples/composer/makefile
@@ -11,6 +11,9 @@ DOCKER_COMPOSE_SERVICE_NAME_FOR_PHP:=php
 include ../../bin-php.makefile
 include ../../bin-composer.makefile
 
+include ../../php-quality-assurance-tools/all.makefile
+include ../../php-testing-tools/all.makefile
+
 # Run everything
 all: vendor
 	@true
