completely clean and install all qa and testing tools in composer example

--- a/examples/composer/makefile
+++ b/examples/composer/makefile
@@ -1,5 +1,5 @@
 ###
-##. Configuration
+##. Includes
 ###
 
 include ../../base.makefile
@@ -14,7 +14,21 @@ include ../../bin-composer.makefile
 include ../../php-quality-assurance-tools/all.makefile
 include ../../php-testing-tools/all.makefile
 
-# Run everything
-all: vendor
-	@true
-.PHONY: all
+###
+## Composer Test Project
+###
+
+# Install everything
+install: | compose.service.php.ensure-running
+	@$(MAKE) vendor $(PHP_CHECK_TOOLS_DEPENDENCIES) $(PHP_FIX_TOOLS_DEPENDENCIES) $(PHP_TESTING_TOOLS_DEPENDENCIES)
+	@$(MAKE) composer.configure-strict composer.check-platform-reqs composer-normalize composer.validate
+.PHONY: install
+
+# Clean all directories and files
+clean: | compose.service.php.ensure-stopped
+	-@rm -rf bin
+	-@rm -rf .composer
+	-@rm -rf vendor
+	-@rm -f composer.json
+	-@rm -f composer.lock
+.PHONY: clean
