load all tools in the updated way

--- a/examples/docker-project/makefile
+++ b/examples/docker-project/makefile
@@ -5,6 +5,23 @@
 YACHT_PROJECTS_ROOT_DIR=$(shell cd ../../examples && pwd)
 
 include ../../base.makefile
+
+###
+## About
+###
+
 include ../../help.makefile
-include ../../docker.makefile
-include ../../tools-for-docker-project.makefile
+
+###
+## Docker
+###
+
+include ../../programs/docker.makefile
+
+###
+## Docker Tools
+###
+
+include ../../programs/curl.makefile
+include ../../programs/jq.makefile
+include ../../docker-tools/*
