explicitly load each individual file

--- a/examples/docker-project/makefile
+++ b/examples/docker-project/makefile
@@ -24,4 +24,15 @@ include ../../programs/docker.makefile
 
 include ../../programs/curl.makefile
 include ../../programs/jq.makefile
-include ../../docker-tools/*
+include ../../docker-tools/ctop.makefile
+include ../../docker-tools/dive.makefile
+include ../../docker-tools/dockly.makefile
+include ../../docker-tools/dozzle.makefile
+include ../../docker-tools/dry.makefile
+include ../../docker-tools/hadolint.makefile
+include ../../docker-tools/lazydocker.makefile
+include ../../docker-tools/portainer.makefile
+include ../../docker-tools/traefik.makefile
+include ../../docker-tools/trivy.makefile
+include ../../docker-tools/watchtower.makefile
+include ../../docker-tools/yacht.makefile
