update the examples

--- a/examples/keycloak/makefile
+++ b/examples/keycloak/makefile
@@ -1,14 +1,26 @@
 ###
-##. Configuration
+## About
 ###
 
 include ../../base.makefile
 include ../../help.makefile
-include ../../docker.makefile
+
+###
+## Docker
+###
 
 DOCKER_COMPOSE_SERVICE_NAME_FOR_KEYCLOAK=keycloak
+include ../../programs/docker.makefile
 
-include ../../keycloak-on-docker-compose.makefile
+###
+## Keycloak
+###
+
+include ../../generic-tools/keycloak-on-docker-compose.makefile
+
+###
+## Project
+###
 
 # Run everything
 all: compose.up keycloak.ensure-ready keycloak.export
