assure make itself calls the same file it was called with

--- a/examples/php-project/makefile
+++ b/examples/php-project/makefile
@@ -52,8 +52,8 @@ include ../../php/combined/php-test.makefile
 
 # Install everything
 install: | compose.service.php.ensure-running
-	@$(MAKE) vendor $(PHP_QUALITY_ASSURANCE_CHECK_TOOLS_DEPENDENCIES) $(PHP_QUALITY_ASSURANCE_FIX_TOOLS_DEPENDENCIES) $(PHP_TESTING_TOOLS_DEPENDENCIES)
-	@$(MAKE) composer.configure-strict composer.check-platform-reqs composer-normalize composer.validate
+	@$(MAKE) --file="$(firstword $(MAKEFILE_LIST))" vendor $(PHP_QUALITY_ASSURANCE_CHECK_TOOLS_DEPENDENCIES) $(PHP_QUALITY_ASSURANCE_FIX_TOOLS_DEPENDENCIES) $(PHP_TESTING_TOOLS_DEPENDENCIES)
+	@$(MAKE) --file="$(firstword $(MAKEFILE_LIST))" composer.configure-strict composer.check-platform-reqs composer-normalize composer.validate
 .PHONY: install
 
 # Clean all directories and files
