add an example for the start with logging functionality

--- a/examples/docker-project/makefile
+++ b/examples/docker-project/makefile
@@ -4,6 +4,10 @@
 
 YACHT_PROJECTS_ROOT_DIR=$(shell cd ../../examples && pwd)
 
+###
+##. Base
+###
+
 include ../../base.makefile
 
 ###
@@ -16,6 +20,7 @@ include ../../help.makefile
 ## Docker
 ###
 
+DOCKER_COMPOSE_DIRECTORY=.
 include ../../programs/docker.makefile
 
 ###
@@ -36,3 +41,13 @@ include ../../docker-tools/traefik.makefile
 include ../../docker-tools/trivy.makefile
 include ../../docker-tools/watchtower.makefile
 include ../../docker-tools/yacht.makefile
+
+###
+## Docker Project
+###
+
+# Start services, but log some sidecar services until they successfully exit
+start: DOCKER_COMPOSE_FLAGS+=--file start-and-log.compose.yaml
+start: DOCKER_COMPOSE_SERVICES_TO_LOG_DURING_UP_UNTIL_SUCCESSFUL_EXIT=first second
+start: compose.up
+	@echo "First and second service exited successfully, do your thing now..."
