make the php project a bit more clear as example

--- a/examples/php-project/compose.yml
+++ b/examples/php-project/compose.yml
@@ -1,10 +1,23 @@
+networks:
+
+  traefik:
+    external: true
+
 services:
 
+  php-sidecar:
+    image: alpine
+    command: sh -c 'echo "Ran some PHP related tasks successfully"'
+
   php:
-    image: php:8.1-fpm-alpine
+    build:
+      context: docker/php
+      dockerfile: Dockerfile
     environment:
       - "COMPOSER_HOME=/app/.composer"
     user: "${UID}:${GID}"
     working_dir: "/app"
     volumes:
       - ".:/app"
+    networks:
+      - traefik
