--- a/examples/php-project/docker/php/Dockerfile
+++ b/examples/php-project/docker/php/Dockerfile
@@ -3,7 +3,7 @@ RUN apt-get --quiet update \
     && apt-get --quiet install --yes autoconf g++ make git zip \
     && rm -rf /var/lib/apt/lists/* && apt-get clean
 WORKDIR /app
-COPY ./docker/php/docker-entrypoint.sh /entrypoint.sh
+COPY ./docker-entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENV PATH="$PATH:/app/bin"
 ENTRYPOINT [ "/entrypoint.sh" ]
